input,picker,verify second run - fix spacing

--- a/src/input-item/index.less
+++ b/src/input-item/index.less
@@ -6,8 +6,8 @@
     align-items: center;
     background: @color-fill-grey-inverse;
     background: var(--am-input-item-background, @color-fill-grey-inverse);
-    padding-left: @size-3;
-    padding-left: var(--am-input-item-padding-left, @size-3);
+    padding-left: @h-spacing-large;
+    padding-left: var(--am-input-item-padding-left, @h-spacing-large);
 
     .a-input-content {
       padding-left: 2px;
@@ -19,8 +19,8 @@
     flex: 1;
     display: flex;
     align-items: center;
-    padding-right: @size-3;
-    padding-right: var(--am-input-line-padding-right, @size-3);
+    padding-right: @h-spacing-large;
+    padding-right: var(--am-input-line-padding-right, @h-spacing-large);
     min-height: @size-12;
     min-height: var(--am-input-line-min-height, @size-12);
     overflow: hidden;
