--- a/src/picker-item/index.less
+++ b/src/picker-item/index.less
@@ -6,8 +6,8 @@
     align-items: center;
     background: @color-fill-grey-inverse;
     background: var(--am-picker-background, @color-fill-grey-inverse);
-    padding-left: @size-3;
-    padding-left: var(--am-picker-padding-left, @size-3);
+    padding-left: @h-spacing-large;
+    padding-left: var(--am-picker-padding-left, @h-spacing-large);
   }
 
   &-line {
@@ -15,8 +15,8 @@
     flex: 1;
     display: flex;
     align-items: center;
-    padding-right: @size-3;
-    padding-right: var(--am-picker-line-padding-right, @size-3);
+    padding-right: @h-spacing-large;
+    padding-right: var(--am-picker-line-padding-right, @h-spacing-large);
     min-height: @size-12;
     min-height: var(--am-picker-line-min-height, @size-12);
     overflow: hidden;
