--- a/src/style/themes/default.less
+++ b/src/style/themes/default.less
@@ -263,11 +263,11 @@ page {
   /* color | 输入框标签字体颜色 */
   --am-input-item-label-color: var(--am-color-text-title);
   /* spacing | 输入框主体左侧缩进 */
-  --am-input-item-padding-left: var(--am-size-3);
+  --am-input-item-padding-left: var(--am-h-spacing-large);
   /* color | 输入框主体背景色 */
   --am-input-item-background: var(--am-color-fill-grey-inverse);
   /* spacing | 输入框内容右侧缩进 */
-  --am-input-line-padding-right: var(--am-size-3);
+  --am-input-line-padding-right: var(--am-h-spacing-large);
   /* size | 输入框内容最小高度 */
   --am-input-line-min-height: var(--am-size-12);
   /* size | 输入框内容最小高度 */
@@ -287,11 +287,11 @@ page {
   /* color | 输入框标签字体颜色 */
   --am-picker-label-color: var(--am-color-text-title);
   /* spacing | 输入框主体左侧缩进 */
-  --am-picker-padding-left: var(--am-size-3);
+  --am-picker-padding-left: var(--am-h-spacing-large);
   /* color | 输入框主体背景色 */
   --am-picker-background: var(--am-color-fill-grey-inverse);
   /* spacing | 输入框内容右侧缩进 */
-  --am-picker-line-padding-right: var(--am-size-3);
+  --am-picker-line-padding-right: var(--am-h-spacing-large);
   /* size | 输入框内容最小高度 */
   --am-picker-line-min-height: var(--am-size-12);
   /* size | 输入框内容最小宽度 */
@@ -308,47 +308,49 @@ page {
   --am-picker-content-value-color: var(--am-color-text-title);
 
   /* verify-code */
-  /* placeholder-color | 暗提示字体颜色 */
+  /* color | 暗提示字体颜色 */
   --am-verify-code-placeholder-color: var(--am-color-text-weak);
-  /* label-color | 验证码框标签字体颜色 */
+  /* color | 验证码框标签字体颜色 */
   --am-verify-code-label-color: var(--am-color-text-title);
-  /* action-active | 发送验证码操作字体颜色 */
+  /* color | 发送验证码操作字体颜色 */
   --am-verify-code-action-active-color: var(--am-color-text-primary);
-  /* action-inactive | 发送验证码操作不可用时字体颜色 */
+  /* color | 发送验证码操作不可用时字体颜色 */
   --am-verify-code-action-inactive-color: var(--am-color-text-subtitle);
-  /* action-border-left |  发送验证码操作左边框 */
-  --am-verify-code-action-border-left: var(--am-border-width-standard) solid var(--am-color-text-weak);
-  /* item-padding-left | 验证码框主体左侧缩进 */
-  --am-verify-code-item-padding-left: var(--am-size-3);
-  /* action-padding-left | 验证码框主体左侧缩进 */
-  --am-verify-code-action-padding-left: var(--am-size-3);
-  /* item-background| 验证码框主体背景色 */
+  /* border-width | 操作区左边框宽度 */
+  --am-verify-code-action-border-left-width: var(--am-border-width-standard);
+  /* color | 操作区左边框颜色 */
+  --am-verify-code-action-border-left-color: var(--am-color-text-weak);
+  /* spacing | 验证码框主体左侧缩进 */
+  --am-verify-code-item-padding-left: var(--am-h-spacing-large);
+  /* spacing | 验证码框主体左侧缩进 */
+  --am-verify-code-action-padding-left: var(--am-h-spacing-large);
+  /* color | 验证码框主体背景色 */
   --am-verify-code-item-background: var(--am-color-fill-grey-inverse);
-  /* line-padding-right | 验证码框内容右侧缩进 */
-  --am-verify-code-line-padding-right: var(--am-size-3);
-  /* line-min-height | 验证码框内容最小高度 */
+  /* spacing | 验证码框内容右侧缩进 */
+  --am-verify-code-line-padding-right: var(--am-h-spacing-large);
+  /* size | 验证码框内容最小高度 */
   --am-verify-code-line-min-height: var(--am-size-12);
-  /* label-min-width | 验证码框内容最小高度 */
+  /* size | 验证码框内容最小高度 */
   --am-verify-code-label-min-width: var(--am-size-20);
-  /* label-color | 验证码框内容最小高度 */
+  /* color | 验证码框内容最小高度 */
   --am-verify-code-label-color: var(--am-color-text-title);
-  /* content-height | 验证码框用户输入区最小高度 */
+  /* size | 验证码框用户输入区最小高度 */
   --am-verify-code-content-height: var(--am-size-6);
-  /* clear-size | 验证码框清除按钮大小 */
-  --am-verify-code-clear-size: var(--am-size-8);
+  // size | 验证码框清除按钮大小 */
+  // --am-verify-code-clear-size: var(--am-size-8);
   /* font-size | 输入框字体大小 */
   --am-verify-code-font-size: var(--am-font-size-list);
 
   /* multi-liner */
-  /* placeholder-color | 暗提示字体颜色 */
+  /* color | 暗提示字体颜色 */
   --am-multi-liner-item-placeholder-color: var(--am-color-text-weak);
-  /* label-color | 多行输入标签字体颜色 */
+  /* color | 多行输入标签字体颜色 */
   --am-multi-liner-item-label-color: var(--am-color-text-title);
-  /* item-padding-left | 多行输入主体左侧缩进 */
+  /* spacing | 多行输入主体左侧缩进 */
   --am-multi-liner-item-padding-left: var(--am-size-3);
-  /* item-background| 多行输入主体背景色 */
+  /* color | 多行输入主体背景色 */
   --am-multi-liner-item-background: var(--am-color-fill-grey-inverse);
-  /* line-padding-right | 多行输入内容右侧缩进 */
+  /* spacing | 多行输入内容右侧缩进 */
   --am-multi-liner-line-padding-right: var(--am-size-3);
   /* line-min-height | 多行输入内容最小高度 */
   --am-multi-liner-line-min-height: var(--am-size-12);
